# mcu-workflow

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  RUNBOOK-C3.md  START-CLAUDE-CODE.md  cage.yaml  install.ps1  install.sh  mcuflow.bat  pyproject.toml  requirements.txt  sensor-node_case.py  sensor-node_preview.stl
.claude/skills/docs-audit/: SKILL.md
.claude/skills/ext-build/: SKILL.md
.claude/skills/release-check/: SKILL.md
.claude/skills/run-mcuflow/: SKILL.md
.github/workflows/: lint.yml  smoke.yml
adapters/: README.md  esp32.py  others.py
agents/: README.md  handoff.md  onboarding.md
agents/skills/: README.md
agents/skills/build-flash/: SKILL.md
agents/skills/hil-test/: SKILL.md
agents/skills/orchestrator/: SKILL.md
agents/skills/workbench-instruments/: SKILL.md
board-schema/: README.md  board.schema.json  validate.py
board-schema/examples/: board-c3.yml
cage/: README.md
cage/proxy/: Dockerfile  allowlist.txt  tinyproxy.conf
ci-templates/: README.md
ci-templates/github/: build.yml  hil.yml
deploy/cage/: README.md  docker-compose.yml
design/: README.md  SKILL.md
docs/: README.md  architecture.md  runbook-c3.md
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json
editors/vscode/media/: home.css  home.js  newproject.css  newproject.js
editors/vscode/src/: cli.ts  extension.ts  home.ts  newproject.ts  newprojectpanel.ts  tree.ts  webview.ts
examples/: board.yml  broken.yml  minimal.yml
hardware/design/: README.md  design.py  parts_db.yaml
hardware/enclosure/: README.md  enclosure.py
launcher/: README.md  cage.yaml
mcuflow/: mcuflow.py
project-template/: README.md
satellite/: protocol.md
satellite/firmware-idf/main/: CMakeLists.txt  idf_component.yml  satellite_main.c
satellite/host/: satellite_driver.py  sim.py
sim/: __init__.py  dut.py  hil.py
skills/: README.md
skills/build-flash/: SKILL.md
skills/orchestrator/: SKILL.md
src/adapters/: __init__.py  base.py  esp32.py  others.py
src/board-schema/: README.md  validate.py
src/debugger/: README.md  debugger.py
src/launcher/: Dockerfile  README.md  up.py
src/mcuflow/: README.md  __init__.py  mcuflow.py
src/portviewer/: README.md  portviewer.py
src/project-template/: README.md  scaffold.py
src/satellite/: README.md  protocol.md
src/satellite/firmware/: satellite.ino
src/satellite/firmware-idf/: CMakeLists.txt  README.md  sdkconfig.defaults
src/satellite/firmware-idf/main/: CMakeLists.txt  satellite_main.c
src/satellite/host/: satellite_driver.py  sim.py
src/serialbridge/: README.md  serialbridge.py
src/sim/: dut.py  hil.py
src/workbench/: README.md  mqtt_broker.py  workbench.py
tests/: smoke.py  test_debugger.py  test_launcher.py  test_mcuflow.py  test_mqtt_broker.py  test_portviewer.py  test_satellite.py  test_serialbridge.py  test_smoke.py  test_workbench.py
tools/: satcheck.py
workbench/: README.md
