[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcuflow"
description = "Contract-first microcontroller workflow: one board.yml drives scaffold, build, flash, and hardware-in-the-loop testing for ESP32 boards."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]                     # single-sourced from mcuflow.__version__
authors = [{ name = "Alon A. Rabinowitz", email = "45129051+AlonRR@users.noreply.github.com" }]
keywords = ["esp32", "esp-idf", "firmware", "hil", "embedded", "microcontroller"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "pyyaml",
    "jsonschema",
    "pyserial",
    "esptool",
]

[project.optional-dependencies]
# ipykernel: VS Code Jupyter Interactive Window / notebooks on the project venv.
dev = [
    "pytest",
    "ruff", 
    "pre-commit", 
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/AlonRR/mcu-workflow"
Repository = "https://github.com/AlonRR/mcu-workflow"
Issues = "https://github.com/AlonRR/mcu-workflow/issues"

[project.scripts]
mcuflow = "mcuflow.mcuflow:main"

# src/ layout: the importable package is `mcuflow`. The other modules under src/
# (board-schema, sim, satellite, portviewer, serialbridge, debugger, workbench)
# are loaded by the CLI at runtime from the source tree, so an editable install
# is the supported mode: `uv pip install -e ".[dev]"`.
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "mcuflow.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcuflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# ruff respects .gitignore, so .venv / build-out / managed_components are skipped.

[tool.ruff.lint]
select = ["E", "F", "W", "I"]            # pycodestyle, pyflakes, warnings, import sorting

[tool.ruff.lint.per-file-ignores]
# enclosure.py emits a build123d script as string templates; those lines are
# intentionally wide so the *generated* code reads naturally.
"hardware/enclosure/enclosure.py" = ["E501"]
